# synapse-lctih

./: README.md  lctih.yaml  pyproject.toml  test_lctih.py
.github/workflows/: python-app.yml  release.yml  test.yml
storm/commands/: lctih.explore.storm  lctih.pivoting.sources.storm  lctih.update.misp.clusters.storm
storm/modules/: lctih.pivoting.sources.storm  lctih.update.misp.clusters.storm  lctih.utils.storm
